# Coding-Interview-Practice

./: CMakeLists.txt  README.md  main.cpp
Basic/: Dijkstra.cpp  quicksort  quicksort.cpp
Element of Programming Interview/: Advancing-array.cpp  Dutch-national-flag-variant-2.cpp  Next-permut.cpp  Plus-one.cpp
Elements/: Buy-and-sell-stock-twice-O1-space.cpp  Buy-and-sell-stock-twice.cpp  Dedup-array-key.cpp  Dedup-array.cpp  Dutch-national-flag-variant-1.cpp  Dutch-national-flag.cpp  Sum-binary.cpp
LP/: principles.md
Leetcode/: 1. Two Sum.cpp  101. Symmetric Tree.cpp  107. Binary Tree Level Order Traversal II.cpp  200. Number of Islands.cpp  209. Minimum Size Subarray Sum.cpp  228. Summary Ranges.cpp  349. Intersection of Two Arrays.cpp  404. Sum of Left Leaves.cpp  451. Sort Characters By Frequency.cpp  50. Pow(x, n).cpp  62. Unique Paths.cpp  665. Non-decreasing Array.cpp  690. Employee Importance.cpp  773. Sliding Puzzle.cpp  85. Maximal Rectangle.cpp  852. Peak Index in a Mountain Array.cpp  872. Leaf-Similar Trees.cpp  905. Sort Array By Parity.cpp  934. Shortest Bridge.cpp
Leetcode/2-pointers/: 1004. Max Consecutive Ones III.cpp  1099. Two Sum Less Than K.cpp  16. 3Sum Closest.cpp  167. Two Sum II - Input array is sorted.cpp  240. Search a 2D Matrix II.cpp  259. 3Sum Smaller.cpp  3. Longest Substring Without Repeating Characters.cpp  3Sum.cpp  424. Longest Repeating Character Replacement.cpp  524.longest-word-in-dictionary-through-deleting.cpp  713. Subarray Product Less Than K.cpp  76. Minimum Window Substring.cpp  845. Longest Mountain in Array.cpp  (+2 more)
(+389 files in other folders)
