cmake_minimum_required(VERSION 3.14)
project(GG)

set(CMAKE_CXX_STANDARD 14)

add_executable(GG main.cpp "Leetcode/367. Valid Perfect Square.cpp" "Leetcode/69. Sqrt(x).cpp" "Leetcode/50. Pow(x, n).cpp" "Leetcode/31. Next Permutation.cpp" "Leetcode/387. First Unique Character.cpp" "Leetcode/451. Sort Characters By Frequency.cpp" "Leetcode/347. Top K Frequent Elements.cpp" "Leetcode/1. Two Sum.cpp" "Leetcode/448. Find All Numbers Disappeared in an Array.cpp" "Leetcode/442. Find All Duplicates in an Array.cpp" "Leetcode/42. Trapping Rain Water.cpp" "Leetcode/349. Intersection of Two Arrays.cpp" "Leetcode/852. Peak Index in a Mountain Array.cpp" "Leetcode/921. Minimum Add to Make Parentheses Valid.cpp" "Leetcode/53. Maximum Subarray.cpp")